manifest/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatbot-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: chatbot-app
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: chatbot-app-container
        image: <registryName>.azurecr.io/chatbot-app:v1
        ports:
        - containerPort: 80
