manifest/private-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-internal-lb
  annotations: 
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: chatbot-app
